fix: dates in date picker is not visible
fix #50

--- a/src/_miscs.scss
+++ b/src/_miscs.scss
@@ -204,3 +204,7 @@ progress::-webkit-progress-value {
 .link_preview__root {
   max-width: 100%;
 }
+
+.rc-datepicker {
+  color: #333;
+}
